syntax = "proto3";

package types;

import "lib/types/header.proto";
import "lib/types/metadata.proto";
import "lib/types/resourcedata.proto";
import "lib/types/taskdata.proto";
import "lib/types/identitydata.proto";

import "repos/protobuf/gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/types";

// MetaData body data struct.
message BlockData {
    types.HeaderPb              header       = 1;
    repeated types.MetaData     metadata     = 2;
    repeated types.ResourceData resourcedata = 3;
    repeated types.IdentityData identitydata = 4;
    repeated types.TaskData     taskdata     = 5;

    //
    uint64 receivedAt   = 6;
    string receivedFrom = 7;
}

message BodyData {
    repeated types.MetaData     metadata     = 1;
    repeated types.ResourceData resourcedata = 2;
    repeated types.IdentityData identitydata = 3;
    repeated types.TaskData     taskdata     = 4;
    bytes                       extraData    = 5;
}

// MetadataLookupEntry is a positional metadata to help looking up the data content of
// a metadata given only its dataId.
message DataLookupEntry {
    bytes  blockHash  = 1;
    uint64 blockIndex = 2;
    uint64 index      = 3;
    string nodeId     = 4;
    string type       = 5;
}
